# poise-thermostat

./: .gitattributes  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  review_display_states.md  review_verification_report.md
.github/workflows/: ci.yml
card/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
card/src/: card-config.ts  comfort.ts  dial.ts  ha-types.ts  history.ts  localize.ts  monitoring.ts  override.ts  poise-card-editor.ts  poise-card.ts  poise-system-card.ts  version.ts
card/test/: card-config.test.ts  comfort.test.ts  dial.test.ts  history.test.ts  monitoring.test.ts  override.test.ts
custom_components/poise/: __init__.py  actuator.py  adaptive_cool.py  arbitration.py  binary_sensor.py  climate.py  clock.py  config_flow.py  config_reconcile.py  config_sections.py  const.py  constraints.py  contracts.py  controller.py  coordinator.py  diagnostics.py  diagnostics_data.py  hub_coordinator.py  ingestion.py  manifest.json  migration.py  pipeline.py  quality_scale.yaml  sensor.py  services.yaml  storage.py  strings.json  switch.py
docs/: Code-Abgleich_Meinungsbild_2026-07.md  Meinungsbild_Wettbewerber_Nutzerfeedback_2026-07.md  Wettbewerbsanalyse_Markt_2026-07.md
docs/adr/: ADR-0000-Format-und-Prozess.md  ADR-0001-MPC-Solver.md  ADR-0002-Schaetzer-Optimierer-Trennung.md  ADR-0003-Residual-Heat-Advisory.md  ADR-0004-TPI-Koeffizienten-Lernen.md  ADR-0005-Datenvertraege-und-Schichtgrenzen.md  ADR-0006-Ausfuehrungs-und-Nebenlaeufigkeitsmodell.md  ADR-0007-Persistenz-Migration-Bootstrap.md  ADR-0008-Config-Schema-und-Defaults.md  ADR-0009-EKF-Tuning-und-Konfidenz-Gating.md  ADR-0010-Solar-Buchhaltung.md  ADR-0011-Simulations-Harness-und-Test-Pyramide.md  ADR-0012-Fehlerbehandlung-Logging-Repair-Issues.md  ADR-0013-Mehrzonen-Ausfuehrung-und-Koordination.md  ADR-0014-Determinismus-und-Referenzfaelle.md  ADR-0015-Aktorpfad-Capability-Matrix.md  ADR-0016-Entity-Modell-und-Card-Vertrag.md  ADR-0017-Operativ-zu-Luft-Transformation.md  ADR-0018-Versionierung-Semver-Deprecation.md  ADR-0019-KNX-Norm-Expose.md  ADR-0020-Performance-Budget.md  ADR-0021-i18n-und-Einheiten.md  ADR-0022-Security-und-Supply-Chain.md  ADR-0023-Komfort-Dual-Setpoint-Totband.md  ADR-0024-EKF-Identifizierbarkeit.md  ADR-0025-Zeitplan-Nachtabsenkung-Optimal-Start.md  ADR-0026-Schatten-Schaetzer-immer-rechnen.md  ADR-0027-Norm-Compliance-Grenzwerte.md  ADR-0028-Seasonless-Rate-EKF-Prior.md  ADR-0029-Generische-Geraete-Quirks.md  ADR-0030-Anti-Garbage-In-Sensorplatzierung.md  ADR-0031-Coordinator-Refactor-Pure-Extraktion.md  ADR-0032-Closed-Loop-Harness-Validierung.md  ADR-0033-MPC-Live-Verdrahtung-Shadow.md  ADR-0034-Optimal-Stop-Coast.md  ADR-0035-Praezedenz-Constraint-Solver.md  ADR-0036-TPI-Direktventil-TRVZB.md  ADR-0037-PI-Setpoint-Kompensator-Shadow.md  ADR-0038-Mehrzonen-Hub-und-Zwei-Phasen-Tick.md  ADR-0039-Kesselbedarf-Aggregat.md  (+23 more)
docs/analysis/: 2026-07-14-manueller-override-split-klima.md  2026-07-14-rc-review-v0.171.0.md  2026-07-14-review-v0.172.0-k2.md  2026-07-14-umsetzungsplan-manueller-override.md  2026-07-16-review-v0.173.0-alpha.md  2026-07-17-review-v0.174.0-alpha.md
docs/review/: CODE-REVIEW-v0.110.0.md
docs/reviews/: 2026-07-12-nachpruefung-v0.166.0.md  2026-07-12-review-v0.163.0.md  2026-07-13-nachpruefung-v0.167.0.md  2026-07-13-nachpruefung-v0.168.0.md  2026-07-13-nachpruefung-v0.168.1.md
docs/roadmap/: ROADMAP-STRATEGIE.md
tests/: conftest.py  test_actuator.py  test_adaptive_cool.py  test_adopt.py  test_adopt_mode.py  test_adr_status_lint.py  test_arbitration.py  test_calibration.py  test_capability.py  test_closed_loop.py  test_config_reconcile.py  test_config_sections.py  test_constraints.py  test_contracts.py  test_cooling.py  test_core.py  test_corridor.py  test_cover_shading.py  test_diagnostics_data.py  test_dual_setpoint.py  test_dynamics.py  test_eco_widen.py  test_en16798.py  test_expected_minutes.py  test_fan_circulation.py  test_fan_cooling.py  test_fan_velocity.py  test_free_running.py  test_gate.py  test_harness.py  test_hdh_savings.py  test_heating_failure.py  test_heatup_rate.py  test_hub_aggregate.py  test_hub_keepalive_gate.py  test_hub_tier0.py  test_humidity.py  test_hvac_action.py  test_hvac_modes.py  test_ingestion.py  (+72 more)
tests/golden/: scenario_baseline.jsonl
tests/harness/: closed_loop.py  golden.py  plant.py  replay.py  trace_replay.py
tests/integration/: conftest.py  coverage_glue.ini  test_actuator_unavailable_write_storm.py  test_adopt_baseline_restore.py  test_apply_options_locking.py  test_compressor_guard.py  test_config_flow.py  test_cool_raise.py  test_coverage_paths.py  test_dry_actuation.py  test_entity_actions.py  test_entity_defaults.py  test_external_feed_keepalive.py  test_forecast_backoff.py  test_frost_rescue_disabled.py  test_glue_coverage2.py  test_glue_coverage3.py  test_glue_coverage4.py  test_hdh_dt_bookkeeping.py  test_hub_glue_coverage.py  test_hvac_action_wiring.py  test_identified_shadow.py  test_idle_reversible.py  test_learning_pause.py  test_lifecycle_review.py  test_migration_glue.py  test_mode_adoption.py  test_override_bootstrap_fixes.py  test_override_lifecycle.py  test_override_mode.py  test_p2_gates_and_defer.py  test_p2_glue.py  test_phase0_attempt_success.py  test_phase0_data_contract.py  test_phase0_effect_sequences.py  (+35 more)
(+91 files in other folders)
