[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poise"
version = "0.42.0"
description = "Self-learning, norm-based thermostat for Home Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["custom_components/poise"]
mypy_path = "."
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["homeassistant.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["custom_components.poise", "custom_components.poise.config_flow", "custom_components.poise.coordinator", "custom_components.poise.climate", "custom_components.poise.actuator", "custom_components.poise.storage", "custom_components.poise.sensor", "custom_components.poise.diagnostics", "custom_components.poise.hub_coordinator", "custom_components.poise.binary_sensor"]
ignore_errors = true

[tool.coverage.run]
source = ["custom_components/poise"]
omit = [
    "custom_components/poise/__init__.py",
    "custom_components/poise/config_flow.py",
    "custom_components/poise/coordinator.py",
    "custom_components/poise/climate.py",
    "custom_components/poise/storage.py",
    "custom_components/poise/sensor.py",
    "custom_components/poise/diagnostics.py",
    "custom_components/poise/hub_coordinator.py",
    "custom_components/poise/binary_sensor.py",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
