[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poise"
version = "0.80.0"
description = "Self-learning, norm-based thermostat for Home Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["custom_components/poise"]
mypy_path = "."
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["homeassistant.*", "voluptuous"]
ignore_missing_imports = true


[tool.coverage.run]
source = ["custom_components/poise"]
# NOTE: these HA-glue modules are now fully mypy --strict checked (no
# ignore_errors). They stay coverage-omitted only until the HA-runtime
# integration tests land (pytest-homeassistant-custom-component, CI-only;
# the sandbox Python caps HA at 2023.7, too old for our 2025.1 APIs).
omit = [
    "custom_components/poise/__init__.py",
    "custom_components/poise/config_flow.py",
    "custom_components/poise/coordinator.py",
    "custom_components/poise/climate.py",
    "custom_components/poise/storage.py",
    "custom_components/poise/sensor.py",
    "custom_components/poise/diagnostics.py",
    "custom_components/poise/hub_coordinator.py",
    "custom_components/poise/binary_sensor.py",
    "custom_components/poise/switch.py",
    "custom_components/poise/frontend/__init__.py",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
