[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poise"
version = "0.122.0"
description = "Self-learning, norm-based thermostat for Home Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
# M6: strict typing covers the integration AND the HA-free closed-loop harness
# (algorithm-adjacent, ADR-0011). The pytest scaffolding under tests/ is not
# strict-typed by design — obvious-typed helpers add little safety value.
files = ["custom_components/poise", "tests/harness"]
mypy_path = "."
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["homeassistant.*", "voluptuous"]
ignore_missing_imports = true


[tool.coverage.run]
source = ["custom_components/poise"]
# NOTE: these HA-glue modules are fully mypy --strict checked (no
# ignore_errors). They are omitted from THIS (HA-free) pure-core coverage
# gate only; they are exercised by the HA-runtime suite in tests/integration
# (separate CI job, e.g. coordinator.py ~66%, config_flow ~81%), which the
# sandbox cannot run (its Python 3.10 caps HA at 2023.7, < our 2025.1 APIs).
omit = [
    "custom_components/poise/__init__.py",
    "custom_components/poise/config_flow.py",
    "custom_components/poise/coordinator.py",
    "custom_components/poise/climate.py",
    "custom_components/poise/storage.py",
    "custom_components/poise/sensor.py",
    "custom_components/poise/diagnostics.py",
    "custom_components/poise/hub_coordinator.py",
    "custom_components/poise/binary_sensor.py",
    "custom_components/poise/switch.py",
    "custom_components/poise/frontend/__init__.py",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
